View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023304 | Community | OCCT:Application Framework | public | 2012-07-17 17:03 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023304: Copying constructor fails to copy both 'myIndx' variables. | ||||
Description | In BRepMesh_PairOfIndex.hxx. Probably a copy-paste bug. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Corresponding git branch pushed. Please review. |
|
No remarks, please test |
|
Dear BugMaster, The workbenches KAS:dev:mkv-23304-occt (GIT branch CR23304) KAS:dev:mkv-23304-products (GIT master) were compiled on Linux platform and tested. Regression: Not detected Improvements: Not detected Testing case: Not needed See results in /QADisk/occttests/results/KAS/dev/mkv-23304-products_18072012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120706-opt_06072012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-17 17:03 | Pawel | New Issue | |
2012-07-17 17:03 | Pawel | Assigned To | => Pawel |
2012-07-17 17:06 | Pawel | Description Updated | |
2012-07-17 17:08 | Pawel | Note Added: 0021016 | |
2012-07-17 17:08 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-17 17:08 | Pawel | Status | new => resolved |
2012-07-18 08:02 |
|
Note Added: 0021027 | |
2012-07-18 08:02 |
|
Status | resolved => reviewed |
2012-07-18 15:48 |
|
Assigned To | bugmaster => mkv |
2012-07-19 14:29 |
|
Note Added: 0021066 | |
2012-07-19 14:30 |
|
Test case number | => Not needed |
2012-07-19 14:30 |
|
Assigned To | mkv => bugmaster |
2012-07-19 14:30 |
|
Status | reviewed => tested |
2012-07-23 12:20 | Pawel | Changeset attached | => occt master 50e433aa |
2012-07-23 12:22 | Pawel | Assigned To | bugmaster => Pawel |
2012-07-23 12:22 | Pawel | Status | tested => verified |
2012-07-23 12:22 | Pawel | Resolution | open => fixed |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |