0023304: Copying constructor fails to copy both 'myIndx' variables.

Copy constructor corrected.